# jantera

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  jp10.yaml  pyproject.toml  rename_project.py  rename_project_v2.py
docs/: HANDOFF.md
docs/wiki/: Architecture.md  Equilibrium.md  Home.md  Kinetics.md  Modules.md  Reactor.md  Thermodynamics.md  Validation.md  _Sidebar.md
profiling/: analyze_sparsity.py  benchmark_batch.py  benchmark_kvaerno_tuning.py  check_cantera_steps.py  compare_diffrax_solvers.py  debug_bdf_jp10.py  hyperparam_diffrax.py  jax_latency_report.md  profile_cantera.py  profile_canterax.py  profile_canterax_detailed.py  profile_jantera.py  profile_jantera_detailed.py  profile_sensitivity.py  test_bdf.py  test_jax_latency.py  verify_bdf_gri30.py  verify_equil.py
tests/: check_sparsejac.py  compare_all_rxns.py  compare_hco_rxns.py  compare_rhs.py  compare_rhs_at_t.py  compare_wdot_at_t.py  convert_jp10.py  count_steps.py  debug_jp10_nan.py  debug_trajectory.py  debug_trajectory_short.py  debug_units.py  diagnose_bdf.py  diagnose_jp10_nan.py  investigate_cantera.py  micro_benchmark.py  profile_adjoint.py  profile_batch.py  profile_gri30.py  profile_jacobian.py  profile_jax_trace.py  profile_reactor.py  profile_step_count.py  quick_perf.py  test_adjoint.py  test_bdf.py  test_equilibrium.py  test_gradients.py  test_kinetics.py  test_load_jp10.py  test_loader.py  test_precision_logic.py  test_reactor.py  test_rhs_gradients.py  test_rhs_gradients_refined.py  test_thermo.py  test_triple_grad.py  test_validation_suite.py  trace_divergence.py  trace_nan.py  (+3 more)
(+13 files in other folders)
